bug 337935 weekly recurrence with sunday hides occurrences on other weekdays. j=shaver